<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:gravity="top|end"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="185dp"
                android:layout_height="50dp"
                android:gravity="top|end"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_settings"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/settings"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/app_res_img_settings" />

                <ImageButton
                    android:id="@+id/button_log_off"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/log_off"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/app_res_img_log_off" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:gravity="center|center_vertical">

            <TextView
                android:id="@+id/textView_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="#E91E63"
                android:textSize="36sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView_modules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modules"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/schedule"
                    android:textColor="#F44336"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_mails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/mails"
                    android:textColor="#FF9800"
                    android:textSize="18sp" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/notes"
                    android:textColor="#4CAF50"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_results"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/results"
                    android:textColor="#2196F3"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textView_links"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/links"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_umtice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/umtice"
                    android:textColor="#673AB7"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_ent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dip"
                    android:minHeight="100dip"
                    android:text="@string/ent"
                    android:textColor="#E91E63"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>